--- a/style.css
+++ b/style.css
@@ -1,22 +1,32 @@
 body {
     margin: auto;
     max-width: 1080px;
+    box-sizing: border-box;
 }
 
 header {
     background-color: lightsalmon;
     width: 80%;
+    margin: auto;
 }
 
 main {
     background-color: rgb(243, 189, 189);
     width: 80%;
+    margin: auto;
 }
 
-a {
+td a {
     text-decoration: none;
     text-align: center;
     color: brown;
+    background-color: white;
+    display: block;
+    font-size: 1.2rem;
+}
+
+p {
+    margin: 0;
 }
 
 form {
